correcção controllers e DTO´s