@@ -1,125 +1,116 @@
 package com.upt.lp.componente2.controller;
 
+import java.util.List;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
+
 import com.upt.lp.componente2.dto.PropostaEstagioDTO;
 import com.upt.lp.componente2.entity.PropostaEstagio;
 import com.upt.lp.componente2.mapper.PropostaEstagioMapper;
 import com.upt.lp.componente2.service.PropostaEstagioService;
-import org.springframework.web.bind.annotation.*;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/propostas-estagio")
+@RequestMapping("/api/propostas")
 public class PropostaEstagioController {
-    
+
     private final PropostaEstagioService propostaService;
-    
+
     public PropostaEstagioController(PropostaEstagioService propostaService) {
         this.propostaService = propostaService;
     }
-    
+
+    // CREATE
+    // POST /api/propostas?empresaId=E&representanteId=R
+    @PostMapping
+    public ResponseEntity<PropostaEstagioDTO> create(@RequestBody PropostaEstagioDTO dto,
+                                                     @RequestParam String empresaId,
+                                                     @RequestParam String representanteId) {
+
+        PropostaEstagio entidade = PropostaEstagioMapper.toEntity(dto);
+        PropostaEstagio criada =
+                propostaService.createProposta(entidade, empresaId, representanteId, dto.getAreasIds());
+
+        PropostaEstagioDTO resposta = PropostaEstagioMapper.toDTO(criada);
+        return new ResponseEntity<>(resposta, HttpStatus.CREATED);
+    }
+
+    // READ todos
     @GetMapping
-    public List<PropostaEstagioDTO> getAllPropostas() {
+    public List<PropostaEstagioDTO> getAll() {
         return propostaService.getAllPropostas()
                 .stream()
                 .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
+    // READ por id
     @GetMapping("/{id}")
-    public PropostaEstagioDTO getPropostaById(@PathVariable String id) {
-        PropostaEstagio proposta = propostaService.getPropostaById(id);
-        return PropostaEstagioMapper.toDTO(proposta);
+    public PropostaEstagioDTO getById(@PathVariable Long id) {
+        PropostaEstagio p = propostaService.getPropostaById(id);
+        return PropostaEstagioMapper.toDTO(p);
     }
-    
-    @PostMapping
-    public PropostaEstagioDTO createProposta(@RequestBody PropostaEstagio proposta,
-                                            @RequestParam String empresaId,
-                                            @RequestParam String representanteId,
-                                            @RequestParam(required = false) List<String> areasIds) {
-        PropostaEstagio novaProposta = propostaService.createProposta(proposta, empresaId, representanteId, areasIds);
-        return PropostaEstagioMapper.toDTO(novaProposta);
-    }
-    
-    @PutMapping("/{id}")
-    public PropostaEstagioDTO updateProposta(@PathVariable String id, @RequestBody PropostaEstagio proposta) {
-        PropostaEstagio propostaAtualizada = propostaService.updateProposta(id, proposta);
-        return PropostaEstagioMapper.toDTO(propostaAtualizada);
-    }
-    
-    @PutMapping("/{id}/aprovar")
-    public void aprovarProposta(@PathVariable String id) {
-        propostaService.aprovarProposta(id);
-    }
-    
-    @PutMapping("/{id}/rejeitar")
-    public void rejeitarProposta(@PathVariable String id) {
-        propostaService.rejeitarProposta(id);
-    }
-    
-    @DeleteMapping("/{id}")
-    public void deleteProposta(@PathVariable String id) {
-        propostaService.deleteProposta(id);
-    }
-    
+
+    // READ por empresa
     @GetMapping("/empresa/{empresaId}")
-    public List<PropostaEstagioDTO> getPropostasByEmpresa(@PathVariable String empresaId) {
+    public List<PropostaEstagioDTO> getByEmpresa(@PathVariable String empresaId) {
         return propostaService.getPropostasByEmpresa(empresaId)
                 .stream()
                 .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
+    // READ por representante
     @GetMapping("/representante/{representanteId}")
-    public List<PropostaEstagioDTO> getPropostasByRepresentante(@PathVariable String representanteId) {
+    public List<PropostaEstagioDTO> getByRepresentante(@PathVariable String representanteId) {
         return propostaService.getPropostasByRepresentante(representanteId)
                 .stream()
                 .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
+    // READ por status
     @GetMapping("/status/{status}")
-    public List<PropostaEstagioDTO> getPropostasByStatus(@PathVariable String status) {
+    public List<PropostaEstagioDTO> getByStatus(@PathVariable String status) {
         return propostaService.getPropostasByStatus(status)
                 .stream()
                 .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
-    @GetMapping("/tipo/{tipo}")
-    public List<PropostaEstagioDTO> getPropostasByTipo(@PathVariable String tipo) {
-        return propostaService.getPropostasByTipo(tipo)
-                .stream()
-                .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+
+    // UPDATE
+    @PutMapping("/{id}")
+    public PropostaEstagioDTO update(@PathVariable Long id,
+                                     @RequestBody PropostaEstagioDTO dto,
+                                     @RequestParam String empresaId,
+                                     @RequestParam String representanteId) {
+
+        PropostaEstagio dados = PropostaEstagioMapper.toEntity(dto);
+        PropostaEstagio atualizada =
+                propostaService.updateProposta(id, dados, empresaId, representanteId, dto.getAreasIds());
+
+        return PropostaEstagioMapper.toDTO(atualizada);
     }
-    
-    @GetMapping("/search")
-    public List<PropostaEstagioDTO> searchPropostasByTitulo(@RequestParam String titulo) {
-        return propostaService.searchPropostasByTitulo(titulo)
-                .stream()
-                .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+
+    // WORKFLOW: aprovar
+    @PostMapping("/{id}/aprovar")
+    public PropostaEstagioDTO aprovar(@PathVariable Long id) {
+        PropostaEstagio p = propostaService.aprovarProposta(id);
+        return PropostaEstagioMapper.toDTO(p);
     }
-    
-    @GetMapping("/pendentes")
-    public List<PropostaEstagioDTO> getPropostasPendentes() {
-        return propostaService.getPropostasPendentes()
-                .stream()
-                .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
+
+    // WORKFLOW: rejeitar
+    @PostMapping("/{id}/rejeitar")
+    public PropostaEstagioDTO rejeitar(@PathVariable Long id) {
+        PropostaEstagio p = propostaService.rejeitarProposta(id);
+        return PropostaEstagioMapper.toDTO(p);
     }
-    
-    @GetMapping("/aprovadas")
-    public List<PropostaEstagioDTO> getPropostasAprovadas() {
-        return propostaService.getPropostasAprovadas()
-                .stream()
-                .map(PropostaEstagioMapper::toDTO)
-                .collect(Collectors.toList());
-    }
-    
-    @GetMapping("/status/{status}/count")
-    public long countPropostasByStatus(@PathVariable String status) {
-        return propostaService.countPropostasByStatus(status);
+
+    // DELETE
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> delete(@PathVariable Long id) {
+        propostaService.deleteProposta(id);
+        return ResponseEntity.noContent().build();
     }
 }
